# ingonyama_challenges

./: Cargo.toml  README.md
gpu_long_arith/: Cargo.toml  build.rs
gpu_long_arith/benches/: multiplication_benchmark.rs
gpu_long_arith/cuda/: mult.cu  mult_opt.cu
gpu_long_arith/src/: lib.rs  main.rs
gpu_long_arith/src/shaders/: mul.cu
min_viable_prover/: Cargo.toml
