[package]
name = "gpu_long_arith"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "mult"
path = "benches/multiplication_benchmark.rs"
harness = false

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"

rustacuda = "0.1"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
"criterion" = "0.4.0"
